# repo-eater

./: .env  .gitignore  README.md  docker-compose.yaml  embedder.py  main.py  pyproject.toml  query.py  vectorize.sh
